// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots renderers/AdvancedFilter default 1`] = `
<form
  css={
    Object {
      "map": undefined,
      "name": "mhepyd",
      "next": undefined,
      "styles": "
  width: 100%;
  font-size: inherit;
",
      "toString": [Function],
    }
  }
  onSubmit={[Function]}
>
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem"
    >
      <input
        css={
          Object {
            "map": undefined,
            "name": "iwqzsn",
            "next": undefined,
            "styles": "
  background-color: #FFF;
  width: 100%;
  padding: 4px 16px;
  border: 1px solid #D3DAE6;
  border-radius: medium:4px;small:2px;;
  font-size: inherit;
  line-height: 19px;
  font-family: monospace;

  &:focus {
    box-shadow: none;
  }
",
            "toString": [Function],
          }
        }
        onChange={[Function]}
        placeholder="Enter filter expression"
        type="text"
        value=""
      />
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        css={
          Object {
            "map": undefined,
            "name": "zezoe8",
            "next": undefined,
            "styles": "
  width: 100%;
  padding: 4px 8px;
  border: 1px solid #D3DAE6;
  border-radius: medium:4px;small:2px;;
  background-color: #FFF;
  font-size: inherit;

  &:hover {
    background-color: #F5F7FA;
  }
",
            "toString": [Function],
          }
        }
        type="submit"
      >
        Apply
      </button>
    </div>
  </div>
</form>
`;

exports[`Storyshots renderers/AdvancedFilter with value 1`] = `
<form
  css={
    Object {
      "map": undefined,
      "name": "mhepyd",
      "next": undefined,
      "styles": "
  width: 100%;
  font-size: inherit;
",
      "toString": [Function],
    }
  }
  onSubmit={[Function]}
>
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem"
    >
      <input
        css={
          Object {
            "map": undefined,
            "name": "iwqzsn",
            "next": undefined,
            "styles": "
  background-color: #FFF;
  width: 100%;
  padding: 4px 16px;
  border: 1px solid #D3DAE6;
  border-radius: medium:4px;small:2px;;
  font-size: inherit;
  line-height: 19px;
  font-family: monospace;

  &:focus {
    box-shadow: none;
  }
",
            "toString": [Function],
          }
        }
        onChange={[Function]}
        placeholder="Enter filter expression"
        type="text"
        value="expression"
      />
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        css={
          Object {
            "map": undefined,
            "name": "zezoe8",
            "next": undefined,
            "styles": "
  width: 100%;
  padding: 4px 8px;
  border: 1px solid #D3DAE6;
  border-radius: medium:4px;small:2px;;
  background-color: #FFF;
  font-size: inherit;

  &:hover {
    background-color: #F5F7FA;
  }
",
            "toString": [Function],
          }
        }
        type="submit"
      >
        Apply
      </button>
    </div>
  </div>
</form>
`;
